<resources>
    <string name="app_name">GAYNOR</string>
    <string name="a01_button1">GAME START</string>
    <string name="a01_button2">CONTROLS</string>
    <string name="a01_button3">HIGH SCORE</string>
    <string name="a01_button4">QUIT</string>
    <string name="a02_cards_default">\?\?\?</string>
    <string name="correct_textview">Correct</string>
    <string name="incorrect_textview">Incorrect</string>
    <string name="letter_A">A</string>
    <string name="letter_B">B</string>
    <string name="letter_C">C</string>
    <string name="letter_D">D</string>
    <string name="letter_E">E</string>
    <string name="letter_F">F</string>
    <string name="letter_G">G</string>
    <string name="letter_H">H</string>
</resources>
