<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/a01_background"
    tools:context=".GameActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/a01_background"
            android:orientation="vertical"
            android:weightSum="50">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/colorWhite"
                android:baselineAligned="true"
                android:orientation="horizontal"
                android:weightSum="30">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    android:weightSum="20">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/correct_textview"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/hitTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:autoText="true"
                        android:background="@null"
                        android:gravity="top"
                        android:text="EditText"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/simpleEditText3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:autoText="true"
                        android:background="@null"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="EditText"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    android:weightSum="20">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/incorrect_textview"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/missTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:autoText="true"
                        android:background="@null"
                        android:gravity="top"
                        android:text="EditText"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:background="@color/a01_background"
                android:orientation="horizontal"
                android:weightSum="40"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout3"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".GameActivity">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:background="@color/a01_background"
                android:orientation="horizontal"
                android:weightSum="40"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".GameActivity">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:background="@color/a01_background"
                android:orientation="horizontal"
                android:weightSum="40"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".GameActivity">

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:background="@color/a01_background"
                android:orientation="horizontal"
                android:weightSum="40"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".GameActivity">

                <Button
                    android:id="@+id/button13"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/button16"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:background="@drawable/activity01_buttondesign"
                    android:onClick="onCardClick"
                    android:text="@string/a02_cards_default"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>